--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>map2child</name>
+  <name>map2root</name>
   <url>http://maven.apache.org</url>
 
   <properties>
